# AI-Policy-Terms-Analyzer

./: .env.example  .gitattributes  .gitignore  AI Generalist Fellowship C7 - Schedule.xlsx  CODE_PERFORMANCE_CHECKLIST.md  GOOGLE_CLOUD_DETECTION.md  LICENSE  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERFORMANCE_REVIEW_REPORT.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  REPO_AUDIT_2026-06-30.md  USER_GUIDE.md  ai_operator_os.py  ai_policy_researcher.py  batch_analyzer.py  document_scanner.py  example_usage.py  extraction_modules.py  key_point_condenser.py  memory assessment   policy_analyzer.py  pyproject.toml  quick_start.py  requirements.txt  test_ai_operator_os.py  test_ai_policy_researcher.py  test_document_scanner.py  test_extraction_modules.py  test_google_cloud.py  test_key_point_condenser.py  test_privacy_concerns.py  test_pyproject_toml.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/agents/: my-agent.agent.md
.github/workflows/: ci.yml  codeql-debug.yml  regression-baseline.yml  tests.yml
docs/: PORTFOLIO_AI_ENGINEERING_ASSESSMENT.md  README.md  RESPONSIBLE_USE_EVIDENCE_RUN_2026-07-22.md  ai_operator_os_architecture.md  configuration.md  regression_baseline.md
docs/examples/: dating-site-bot-detection.json  fintech-analysis.json
tests/: test_policy_analyzer_regression.py
