[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-policy-terms-analyzer"
version = "0.1.0"
description = "Extract technical information from company AI policies and terms of service"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
web = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]
pdf = ["pdfplumber>=0.10.0"]
all = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pdfplumber>=0.10.0",
]

[project.scripts]
analyze-policy = "quick_start:main"

[tool.setuptools]
py-modules = [
    "ai_operator_os",
    "ai_policy_researcher",
    "batch_analyzer",
    "document_scanner",
    "example_usage",
    "extraction_modules",
    "key_point_condenser",
    "policy_analyzer",
    "quick_start",
]
